--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,6 +11,7 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,300;1,700&display=swap"
     rel="stylesheet">
@@ -19,7 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-
+  <!-- Tailwindcss -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <!-- Custom styles for this template-->
   <link href="/startbootstrap-sb-admin-2-gh-pages/css/sb-admin-2.min.css" rel="stylesheet">
   <!-- Font Awsome -->
@@ -48,4 +50,5 @@
 <!-- Page level custom scripts -->
 <script src="/startbootstrap-sb-admin-2-gh-pages/js/demo/chart-area-demo.js"></script>
 <script src="/startbootstrap-sb-admin-2-gh-pages/js/demo/chart-pie-demo.js"></script>
+<script src="https://kit.fontawesome.com/403eae01a6.js" crossorigin="anonymous"></script>
 </html>
