--- a/assignment/index.html
+++ b/assignment/index.html
@@ -29,7 +29,7 @@
   <title>Assignment</title>
 </head>
 
-<body id="page-top">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
