--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,33 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="icon" href="https://res.cloudinary.com/dd0io3fh2/image/upload/v1645351972/icon_saisyu.png">
-  <!-- Google Font -->
+  <link rel="icon" href="https://res.cloudinary.com/dd0io3fh2/image/upload/v1648878761/logo_b36lmk.png">
+  <!-- <link href="startbootstrap-sb-admin-2-gh-pages/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
+    type="text/css"> -->
+  <!-- <link href="/startbootstrap-sb-admin-2-gh-pages/css/sb-admin-2.min.css" rel="stylesheet"> -->
+
+  <!-- Link  -->
+  <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap"
     rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,300;1,700&display=swap"
-    rel="stylesheet">
-  <!-- Custom fonts for this template-->
-  <link href="startbootstrap-sb-admin-2-gh-pages/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
-    type="text/css">
-  <link
-    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
-  <!-- Tailwindcss -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Custom styles for this template-->
-  <link href="/startbootstrap-sb-admin-2-gh-pages/css/sb-admin-2.min.css" rel="stylesheet">
-  <!-- Font Awsome -->
-  <script src="https://kit.fontawesome.com/7ff3268bda.js" crossorigin="anonymous"></script>
-  <!-- icon -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/403eae01a6.js" crossorigin="anonymous"></script>
+  <!-- End link -->
   <title>Assignment</title>
 </head>
 
@@ -40,21 +29,12 @@
 </body>
 
 <!-- Bootstrap core JavaScript-->
-<script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js"></script>
+<!-- <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js"></script>
 <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Core plugin JavaScript-->
 <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-<!-- Custom scripts for all pages-->
 <script src="/startbootstrap-sb-admin-2-gh-pages/js/sb-admin-2.min.js"></script>
-
-<!-- Page level plugins -->
 <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/chart.js/Chart.min.js"></script>
-
-<!-- Page level custom scripts -->
 <script src="/startbootstrap-sb-admin-2-gh-pages/js/demo/chart-area-demo.js"></script>
-<script src="/startbootstrap-sb-admin-2-gh-pages/js/demo/chart-pie-demo.js"></script>
-<script src="https://kit.fontawesome.com/403eae01a6.js" crossorigin="anonymous"></script>
+<script src="/startbootstrap-sb-admin-2-gh-pages/js/demo/chart-pie-demo.js"></script> -->
 
 </html>
