--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,13 +7,13 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="src/css/signup.css">
   <link rel="icon" href="https://res.cloudinary.com/dd0io3fh2/image/upload/v1648878761/logo_b36lmk.png">
   <!-- <link href="startbootstrap-sb-admin-2-gh-pages/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
     type="text/css"> -->
   <!-- <link href="/startbootstrap-sb-admin-2-gh-pages/css/sb-admin-2.min.css" rel="stylesheet"> -->
 
   <!-- Link  -->
-  <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap"
@@ -26,6 +26,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  
 </body>
 
 <!-- Bootstrap core JavaScript-->
